added javascript and css folders, changed background

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" type="text/css" href="assets/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <meta charset="utf-8">
     <title>Dogs!</title>
@@ -36,7 +36,6 @@
   <div class="container">
     <div class="jumbotron text-center"> 
         <h1>Dog Search</h1>
-        <img src="assets/images/nova-sticker.png">
     </div>
     <div class="row">
         <div id="buttons-view" class="text-center"></div>
@@ -64,7 +63,7 @@
     
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="assets/giftastic.js">
+    <script type="text/javascript" src="assets/javascript/giftastic.js">
     </script>
   </div>
 </body>
